--- a/roas-forecast-service/Dockerfile.api
+++ b/roas-forecast-service/Dockerfile.api
@@ -9,6 +9,8 @@ COPY requirements.txt .
 RUN pip install --upgrade pip && pip install -r requirements.txt
 
 COPY src ./src
+COPY scripts ./scripts
+COPY sql ./sql
 COPY models ./models
 
 EXPOSE 8000
