Update docker-compose for local workflow

--- a/roas-forecast-service/docker-compose.yml
+++ b/roas-forecast-service/docker-compose.yml
@@ -21,3 +21,17 @@ services:
       - clickhouse
     ports:
       - '8000:8000'
+  
+  migrate:
+    image: clickhouse/clickhouse-server:24.9
+    depends_on:
+      - clickhouse
+    volumes:
+      - ./sql:/sql:ro
+    entrypoint: ["/bin/bash","-lc"]
+    command: >
+      "until clickhouse-client --host clickhouse --query 'SELECT 1' >/dev/null 2>&1;
+       do echo 'waiting for clickhouse...'; sleep 1; done;
+       clickhouse-client --host clickhouse --multiquery < /sql/schema.sql"
+
+
